Refactor: 피드 조회 응답 개선 및 생성 책임 분리